Added "forwards" tests for expressions, which now includes numeric tests.